# mcp-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  database.py  docker-compose.yml  main.py  pyproject.toml
frontend/: Dockerfile
frontend/src/: App.css  App.tsx  api.ts  index.css
mcp/: server.py
